feat: Implement document parsing and auditing features
- Add TablesCheckStrategy for validating table formatting according to GOST standards.
- Introduce AuditEventListener to log document-related events such as uploads, checks, and deletions.
- Create domain events for document uploads, deletions, and check completions.
- Implement MetricsEventListener to track metrics for document uploads and checks.
- Develop NotificationEventListener to send user notifications for document events.
- Establish SpringDomainEventPublisher for event publishing.
- Create ReadDocumentRepository and WriteDocumentRepository for document data access.
- Implement DocumentParserChain and various document parsers (DOCX, PDF, Markdown, TXT).
- Define ParsedDocument, ParsedSection, and ParsedTable for structured document representation.
- Add persistence entities for audit logs and check strategy settings.
- Create repositories for audit logs and check strategy settings.
- Add database migration scripts for creating necessary tables and initial data.