@@ -5,56 +5,63 @@ import org.springframework.stereotype.Component;
 import ru.normacontrol.domain.entity.Document;
 import ru.normacontrol.domain.enums.DocumentStatus;
 import ru.normacontrol.domain.repository.DocumentRepository;
+import ru.normacontrol.domain.repository.ReadDocumentRepository;
+import ru.normacontrol.domain.repository.WriteDocumentRepository;
 import ru.normacontrol.infrastructure.persistence.entity.DocumentJpaEntity;
 import ru.normacontrol.infrastructure.persistence.repository.DocumentJpaRepository;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
- * Адаптер, реализующий доменный порт DocumentRepository
- * через Spring Data JPA.
+ * JPA adapter for both read and write document ports.
  */
 @Component
 @RequiredArgsConstructor
-public class DocumentRepositoryAdapter implements DocumentRepository {
+public class DocumentRepositoryAdapter implements DocumentRepository, ReadDocumentRepository, WriteDocumentRepository {
 
     private final DocumentJpaRepository jpaRepository;
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public Document save(Document document) {
-        DocumentJpaEntity entity = toJpaEntity(document);
-        DocumentJpaEntity saved = jpaRepository.save(entity);
-        return toDomain(saved);
+        return toDomain(jpaRepository.save(toJpaEntity(document)));
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public Optional<Document> findById(UUID id) {
         return jpaRepository.findById(id).map(this::toDomain);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public List<Document> findByOwnerId(UUID ownerId) {
-        return jpaRepository.findByOwnerId(ownerId).stream()
-                .map(this::toDomain)
-                .collect(Collectors.toList());
+        return jpaRepository.findByOwnerId(ownerId).stream().map(this::toDomain).toList();
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public List<Document> findByStatus(DocumentStatus status) {
-        return jpaRepository.findByStatus(status).stream()
-                .map(this::toDomain)
-                .collect(Collectors.toList());
+        return jpaRepository.findByStatus(status).stream().map(this::toDomain).toList();
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void deleteById(UUID id) {
         jpaRepository.deleteById(id);
     }
-
-    // ── Маппинг Domain ↔ JPA ──────────────────────────────────────────────
 
     private DocumentJpaEntity toJpaEntity(Document doc) {
         return DocumentJpaEntity.builder()
